# face_detection_ros2

./: .gitignore  README.md
ros2_cv/: package.xml
ros2_cv/ros2_cv/: face_detection.py
ros2_cv/ros2_cv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_cv/ros2_cv/log/: latest_build
